solc_ossfuzz_seed_corpus/test_sol/test_359405a97a5f8689cf0add3ded1a419ce94bbd547a6051813085a7fa88bf7bf2_c364b3d1f21a952112ee44384a8a0cb6b3bf1d13_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
contract C0 {
  address immutable  s0;
  mapping(bytes28 => int216)  public s1;
  int192   s2;
  constructor(address i0,int192 i1)   {
    s0 = msg.sender;
    s2 ^= ((int192(0) % int192(((int192((int192(3138550867693340381917894711603833208051177722232017256447) / int192(3138550867693340381917894711603833208051177722232017256447))) & int192(3138550867693340381917894711603833208051177722232017256447)) / int192(3138550867693340381917894711603833208051177722232017256447)))) - int192(44377990045075649504642037782051241829331805887036659790));
    s1[bytes28(0x00000000000000000000000000000000000000000000000000000000)] += int216((int216((int216(33292573982708635548916458876447458017520832006865150964823355895) / (int216(33979916822523502300117328836976302639339850229197065440071365760) % int216(52656145834278593348959013841835216159447547700274555627155488767)))) / int216(0)));
    {
      (bool l0, bytes memory l1) = address(this).call(bytes("ffffffffffffffffffffffffffffffffff"));
    }
  }
}
struct St0 {
  mapping(int128 => string) el0;
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
contract C1 {
  receive() external virtual  payable
  {
    bool[] storage l0;
    (l0[uint256(0)]) = (false);
    assert(l0[uint256(0)] == false);
    unchecked {
      l0 = (true ? [true] : (l0[uint256(((uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935) << uint248((uint248(129859280026964971063986864345149174124783202794513185316648470584586645487) << uint224((uint224(23332154719614233131295831280555409569453462969597472663245807507897) & uint224(18227528526118144539521968599116570026019002728591617102475774784497)))))) / uint256(0)))] ? [false] : [false]));
      int152 l1 = ((((((int152(2854495385411919762116571938898990272765493247) - int152(2274272339437790733842693903584547076847365626)) % int152(2854495385411919762116571938898990272765493247)) | int152(0)) | int152(0)) - int152(0)) ^ int152(-1030959827702998174454842679944223941472405995));
    }
    address l2 = (l0[(~(uint256(44445561707222147907211643754756938742179041556421871547818147691284903872122)))] ? address(this) : address(this));
    function () internal   l3;
  }
  bytes   s3 = bytes("ffffffffffffffffffffffffffffffffffffffffffffffff00000000000000000000000000000000000000000000");

	function compareMemoryAndStorage(bytes memory v1, bytes storage v2) internal pure returns (bool) {
		return keccak256(bytes(v1)) == keccak256(bytes(v2));
	}
  bool   s4;
  bool  public s5 = false;
  uint88   s6;
  constructor(bool i0,uint88 i1)   {
    s4 = true;
    s6 >>= (((uint88(309485009821345068724781055) >> uint184((uint184(9148941840219794968373486601964054876674927203295242576) - uint184(17102693041118355192021494676173573667738899716317779327)))) & uint88(0)) - uint88(270906470259781289210376718));
    { }
  }
}
// ----
// TypeError 7407: (su1.sol:201-629): Type bool[1] memory is not implicitly convertible to expected type bool[] storage pointer.
